clusters/production/platform/outline/outline-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: outline
